--- a/Dermstore/styles/index.css
+++ b/Dermstore/styles/index.css
@@ -36,6 +36,10 @@
     display: flex;
     align-items: center;
 }
+#navbar a{
+    color: black;
+   text-decoration: none;
+}
 #upper_strip_banner{
     width: 100%;
     height: 50px;
